# EchoShade

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerFlags.cmake  Dependencies.cmake  Platform.cmake  SIMD.cmake
config/: default.json
include/echoshade/: AudioDevice.hpp  AudioInput.hpp  AudioOutput.hpp  Config.hpp  DSPPipeline.hpp  FileProcessor.hpp  MelFilterbank.hpp  MetricsCollector.hpp  PerturbationEngine.hpp  PlatformProfile.hpp  PlatformRegistry.hpp  PsychoacousticMasker.hpp  STFTProcessor.hpp  STFTStage.hpp  StreamProcessor.hpp  Version.hpp
include/echoshade/gui/: Application.hpp
src/: CMakeLists.txt  main.cpp
src/config/: Config.cpp
src/core/: AudioDevice.cpp  AudioInput.cpp  AudioOutput.cpp  DSPPipeline.cpp  MelFilterbank.cpp  PortAudioContext.hpp  STFTProcessor.cpp  STFTStage.cpp  StreamProcessor.cpp
src/file/: FileProcessor.cpp
src/gui/: Application.cpp
src/metrics/: MetricsCollector.cpp
src/perturbation/: PerturbationEngine.cpp  PsychoacousticMasker.cpp
src/utils/: AtomicParams.hpp  MathUtils.hpp  RingBuffer.hpp  SIMDHelpers.hpp  VUMeter.hpp
tests/: CMakeLists.txt  test_atomic_params.cpp  test_audio_device.cpp  test_config.cpp  test_dsp_pipeline.cpp  test_latency_bench.cpp  test_math_utils.cpp  test_platform_registry.cpp  test_psychoacoustic.cpp  test_ringbuffer.cpp  test_ringbuffer_concurrent.cpp  test_stft.cpp
tools/: peaq_estimate.py  spectrogram_compare.py
